--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,12 @@
 {% block title %}Home{% endblock title %}
 {% block content %}
 <h1>homepage</h1>
+{% if user.is_authenticated %}
+    hi {{ user.username }} <br>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+<p>you are not logged in</p>
+<a href="{% url 'login' %}">Login</a> <br>
+<a href="{% url 'signup' %}">Sign Up</a>
+{% endif %}
 {% endblock content %}
