--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,10 +24,10 @@
                 <nav class="my-2 my-md-0 mr-md-3">
                     <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
                     {% if user.is_authenticated %}
-                        <a class="p-2 text-dark" href="{% url 'logout' %}">Logout</a>
+                        <a class="p-2 text-dark" href="{% url 'account_logout' %}">Logout</a>
                     {% else %}
-                        <a class="p-2 text-dark" href="{% url 'login' %}">Login</a>
-                        <a href="{% url 'signup' %}" class="btn btn-outline-primary">Sign Up</a>
+                        <a class="p-2 text-dark" href="{% url 'account_login' %}">Login</a>
+                        <a href="{% url 'account_signup' %}" class="btn btn-outline-primary">Sign Up</a>
                     {% endif %}
                 </nav>
             </div>
