--- a/templates/home.html
+++ b/templates/home.html
@@ -10,11 +10,11 @@
 <br>
 {% if user.is_authenticated %}
     hi {{ user.username }} <br>
-    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'account_logout' %}">Logout</a>
 {% else %}
 <p>you are not logged in</p>
-<a href="{% url 'login' %}">Login</a> <br>
-<a href="{% url 'signup' %}">Sign Up</a>
+<a href="{% url 'account_login' %}">Login</a> <br>
+<a href="{% url 'account_signup' %}">Sign Up</a>
 {% endif %}
 
 {% endblock content %}
