--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 <div class="book-detail">
+    {% if book.cover %}
+        <img src="{{ book.cover.url }}" class="bookcover" alt="{{ book.title }}">
+    {% else %}
+        <img src="https://via.placeholder.com/200x300" class="bookcover" alt="{{ book.title }}">
+    {% endif %}
     <h2><a href="#">{{ book.title }}</a></h2>
     <p>Author: {{ book.author }}</p>
     <p>Price: {{ book.price }}</p>
