--- a/templates/home.html
+++ b/templates/home.html
@@ -11,16 +11,20 @@
     <input type="text" placeholder="Search" aria-label="Search" name="q" class="form-control mr-sm-2">
 </form>
 <div style="padding-top: 1rem;">
-    <img class="bookcover" src="{% static 'images/book_cover.jpg' %}" alt="">
     <br>
-    {% if user.is_authenticated %}
-        hi {{ user.username }} <br>
-        <a href="{% url 'account_logout' %}">Logout</a>
-    {% else %}
-    <p>you are not logged in</p>
-    <a href="{% url 'account_login' %}">Login</a> <br>
-    <a href="{% url 'account_signup' %}">Sign Up</a>
-    {% endif %}
+    <div class="container d-flex justify-content-center flex-column align-items-center shadow p-3 mb-5 bg-white rounded">
+        <div class="justify-content-center text-center">
+            <h2>yoooo!!....this yeye site dey work oooo</h2>
+            <h3>omo...i suffer to make this thing work</h3>
+        </div>
+        <div>
+            <img class="photo" src="{% static 'images/look.jpg' %}" alt="">
+        </div>
+        <div class="mt-3">
+            <h1>COME AGAIN!!!</h1>
+        </div>
+    </div>
+
 </div>
 
 {% endblock content %}
